--- a/1411143037/20250411.html
+++ b/1411143037/20250411.html
@@ -3,8 +3,7 @@
   <head>
     <title>Web AR Example</title>
      <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/AR-js-
-org/AR.js/aframe/build/aframe-ar.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js/aframe/build/aframe-ar.js"></script>
     </head> 
     <body>
       <a-scene>    
