--- a/0425.html
+++ b/0425.html
@@ -20,8 +20,8 @@
     <a-marker preset="hiro">
       <!-- 在 Hiro 標記上放置一個立方體（a-box） -->
       <!-- position="-0.5 0.5 0" 表示物件相對於標記的位置（左邊偏一點、高度 0.5） -->
-      <!-- color="teal" 表示顏色為藍綠色 -->
-      <a-box position="-0.5 0.5 0" color="teal"></a-box>
+      <!-- color="teal" 表示顏色為藍色 -->
+      <a-box position="-0.5 0.5 0" color="#6495ed"></a-box>
     </a-marker>
 
     <!-- 第二個標記：Kanji -->
