--- a/1411143037.html
+++ b/1411143037.html
@@ -29,7 +29,7 @@ aframe.prod.js"></script>
     >
     <!-- 資源預載：貼圖 -->
     <a-assets>
-    <img id="resultImg" src="card1.jpg" />
+    <img id="resultImg" src="card1.png" />
     </a-assets>
     <!-- 環境光，避免場景全黑 -->
     <a-light type="ambient" intensity="3"></a-light>
