--- a/1411143037.html
+++ b/1411143037.html
@@ -22,7 +22,7 @@ body { margin: 0; overflow: hidden; }
     >
     <!-- 載入影片資源（要與 HTML 放在同一目錄） -->
     <a-assets>
-    <video id="introVid" src="video.mov" preload="auto" loop muted></video>
+    <video id="introVid" src="export_1746158016689.mov" preload="auto" loop muted></video>
     </a-assets>
     <!-- 環境光線，避免影片太暗 -->
     <a-light type="ambient" intensity="1"></a-light>
